# what_dinner

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
app/: main.py  security.py
app/models/: database.py  models.py  schemas.py
app/routers/: auth.py  foods.py  tags.py  users.py
